--- a/NugetDbTools/NugetShared/Package.nuspec
+++ b/NugetDbTools/NugetShared/Package.nuspec
@@ -1,8 +1,8 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <package >
   <metadata>
     <id>NuGetShared</id>
-    <version>0.1.2</version>
+    <version>0.1.23</version>
     <authors>joglethorpe</authors>
     <owners>Ecentric Payment Systems</owners>
     <projectUrl>https://epsdev.visualstudio.com/Continous%20Integration</projectUrl>
