Pushed all nuget packages to server

--- a/NugetDbTools/NugetDbPacker/Package.nuspec
+++ b/NugetDbTools/NugetDbPacker/Package.nuspec
@@ -2,17 +2,17 @@
 <package >
   <metadata>
     <id>NuGetDbPacker</id>
-    <version>0.1.23</version>
+    <version>0.1.28</version>
     <authors>joglethorpe</authors>
     <owners>joglethorpe</owners>
-    <projectUrl>https://epsdev.visualstudio.com/Continous%20Integration</projectUrl>
+    <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>NuGetDbPacker utility for creating database NuGet packages</description>
     <releaseNotes>Initial release</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>NuGetDbPacker 'CI tools'</tags>
     <dependencies>
-      <dependency id="NuGetShared" version="0.1.23"/>
+      <dependency id="NuGetShared" version="0.1.28"/>
     </dependencies>
   </metadata>
   <files>
