--- a/NugetDbTools/DbSolutionBuilder/Package.nuspec
+++ b/NugetDbTools/DbSolutionBuilder/Package.nuspec
@@ -1,18 +1,18 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <package >
   <metadata>
     <id>DbSolutionBuilder</id>
-    <version>0.1.1</version>
+    <version>0.1.28</version>
     <authors>joglethorpe</authors>
     <owners>Ecentric Payment Systems</owners>
-    <projectUrl>https://epsdev.visualstudio.com/Continous%20Integration</projectUrl>
+    <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Migration utility creating a SQL project from CI</description>
+    <description>Migration utility creating a SQL project</description>
     <releaseNotes>Initial release</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>DbSolutionBuilder CI Migration</tags>
     <dependencies>
-      <dependency id="NuGetShared" version="0.1.23"/>
+      <dependency id="NuGetShared" version="0.1.28"/>
     </dependencies>
   </metadata>
   <files>
