--- a/Template.DB/Template.DBPkg/Template.DBPkg.csproj
+++ b/Template.DB/Template.DBPkg/Template.DBPkg.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NuGetDbPacker" Version="0.1.14" />
+    <PackageReference Include="NuGetDbPacker" Version="0.1.35" />
+    <PackageReference Include="NugetDbPackerDb.Root" Version="0.2.1" />
   </ItemGroup>
 
 </Project>
