--- a/Template.DB/Template.DBProject/Template.DBProject.nuget.config
+++ b/Template.DB/Template.DBProject/Template.DBProject.nuget.config
@@ -5,15 +5,16 @@
     <add key="minorVersion" value="2" />
   </nugetOptions>
   <nugetSettings>
+    <add key="copyright" value="Copyright 2017" />
+    <add key="projectUrl" value="https://epsdev.visualstudio.com/Backoffice" />
     <add key="id" value="Template.DBProject" />
+    <add key="releaseNotes" value="First testing release" />
+    <add key="description" value="Template.DBProject" />
     <add key="authors" value="joglethorpe" />
     <add key="owners" value="Ecentric Payment Systems" />
-    <add key="projectUrl" value="https://epsdev.visualstudio.com/Backoffice" />
-    <add key="description" value="Template.DBProject" />
-    <add key="releaseNotes" value="First testing release" />
-    <add key="copyright" value="Copyright 2017" />
+    <add key="version" value="0.2.6" />
   </nugetSettings>
   <nugetDependencies>
-    <add key="NuGetDbPacker" value="0.1.20" />
+    <add key="NuGetDbPacker" value="0.1.35" />
   </nugetDependencies>
 </configuration>
