Add NuGetDbPackerDb.Root to nuget.config

--- a/Template.DB/Template.DBProject/Template.DBProject.nuget.config
+++ b/Template.DB/Template.DBProject/Template.DBProject.nuget.config
@@ -16,5 +16,6 @@
   </nugetSettings>
   <nugetDependencies>
     <add key="NuGetDbPacker" value="0.1.35" />
+    <add key="NugetDbPackerDb.Root" value="0.2.1" />
   </nugetDependencies>
 </configuration>
