--- a/NugetDbTools/NuGetSharedPacker/Package.nuspec
+++ b/NugetDbTools/NuGetSharedPacker/Package.nuspec
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0"?>
 <package >
   <metadata>
-    <id>NuGetDbPacker</id>
+    <id>NuGetProjectPacker</id>
     <version>0.1.35</version>
     <authors>joglethorpe</authors>
     <owners>joglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>NuGetDbPacker utility for creating database NuGet packages</description>
+    <description>NuGetProjectPacker utility for creating project NuGet packages</description>
     <releaseNotes>Initial release</releaseNotes>
     <copyright>Copyright 2017</copyright>
-    <tags>NuGetDbPacker 'CI tools'</tags>
+    <tags>NuGetProjectPacker 'CI tools'</tags>
     <dependencies>
       <dependency id="NuGetSharedPacker" version="0.1.38"/>
     </dependencies>
