--- a/NugetDbTools/NuGetSharedPacker/Package.nuspec
+++ b/NugetDbTools/NuGetSharedPacker/Package.nuspec
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0"?>
 <package >
   <metadata>
-    <id>NuGetProjectPacker</id>
-    <version>0.1.35</version>
+    <id>NuGetSharedPacker</id>
+    <version>0.1.8</version>
     <authors>joglethorpe</authors>
     <owners>joglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>NuGetProjectPacker utility for creating project NuGet packages</description>
+    <description>NuGetSharedPacker utility for creating project NuGet packages</description>
     <releaseNotes>Initial release</releaseNotes>
     <copyright>Copyright 2017</copyright>
-    <tags>NuGetProjectPacker 'CI tools'</tags>
+    <tags>NuGetSharedPacker 'CI tools'</tags>
     <dependencies>
-      <dependency id="NuGetSharedPacker" version="0.1.38"/>
+      <dependency id="NuGetShared" version="0.1.43"/>
     </dependencies>
   </metadata>
   <files>
