--- a/NugetDbTools/DbSolutionBuilder/Package.nuspec
+++ b/NugetDbTools/DbSolutionBuilder/Package.nuspec
@@ -4,7 +4,7 @@
     <id>DbSolutionBuilder</id>
     <version>0.1.68</version>
     <authors>joglethorpe</authors>
-    <owners>Ecentric Payment Systems</owners>
+    <owners>Jamie Oglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Migration utility creating a SQL project</description>
