--- a/Template.DB/Template.DBProject/Template.DBProject.nuget.config
+++ b/Template.DB/Template.DBProject/Template.DBProject.nuget.config
@@ -11,7 +11,7 @@
     <add key="releaseNotes" value="First testing release" />
     <add key="description" value="Template.DBProject" />
     <add key="authors" value="joglethorpe" />
-    <add key="owners" value="Ecentric Payment Systems" />
+    <add key="owners" value="Jamie Oglethorpe" />
     <add key="version" value="0.2.6" />
   </nugetSettings>
   <nugetDependencies>
