--- a/NugetDbTools/DbSolutionBuilder/Package.nuspec
+++ b/NugetDbTools/DbSolutionBuilder/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>DbSolutionBuilder</id>
-    <version>0.1.82</version>
+    <version>0.1.83-Ecentric</version>
     <authors>joglethorpe</authors>
     <owners>Jamie Oglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
@@ -12,7 +12,7 @@
     <copyright>Copyright 2017</copyright>
     <tags>DbSolutionBuilder CI Migration</tags>
     <dependencies>
-      <dependency id="NuGetShared" version="0.1.93" />
+      <dependency id="NuGetShared" version="0.1.94" />
     </dependencies>
   </metadata>
   <files>
