--- a/NugetDbTools/NugetDbPacker/Package.nuspec
+++ b/NugetDbTools/NugetDbPacker/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>NuGetDbPacker</id>
-    <version>0.1.91-Ecentric</version>
+    <version>0.1.92</version>
     <authors>joglethorpe</authors>
     <owners>joglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
@@ -12,7 +12,7 @@
     <copyright>Copyright 2017</copyright>
     <tags>NuGetDbPacker 'CI tools'</tags>
     <dependencies>
-      <dependency id="NuGetSharedPacker" version="0.1.53" />
+      <dependency id="NuGetSharedPacker" version="0.1.55" />
     </dependencies>
   </metadata>
   <files>
