--- a/NugetDbTools/NuGetProjectPacker/Package.nuspec
+++ b/NugetDbTools/NuGetProjectPacker/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>NuGetProjectPacker</id>
-    <version>0.1.53</version>
+    <version>0.1.56-Ecentric</version>
     <authors>joglethorpe</authors>
     <owners>joglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
@@ -12,7 +12,7 @@
     <copyright>Copyright 2017</copyright>
     <tags>NuGetProjectPacker 'CI tools'</tags>
     <dependencies>
-      <dependency id="NuGetSharedPacker" version="0.1.61" />
+      <dependency id="NuGetSharedPacker" version="0.1.62" />
     </dependencies>
   </metadata>
   <files>
