--- a/NugetDbTools/NugetDbPacker/Package.nuspec
+++ b/NugetDbTools/NugetDbPacker/Package.nuspec
@@ -12,7 +12,7 @@
     <copyright>Copyright 2017</copyright>
     <tags>NuGetDbPacker 'CI tools'</tags>
     <dependencies>
-      <dependency id="GitExtension" version="0.1.62" />
+      <dependency id="NuGetSharedPacker" version="0.1.62" />
     </dependencies>
   </metadata>
   <files>
