--- a/NugetDbTools/DbSolutionBuilder/Package.nuspec
+++ b/NugetDbTools/DbSolutionBuilder/Package.nuspec
@@ -12,7 +12,7 @@
     <copyright>Copyright 2017</copyright>
     <tags>DbSolutionBuilder CI Migration</tags>
     <dependencies>
-      <dependency id="NuGetShared" version="0.1.112" />
+      <dependency id="NuGetDbPacker" version="0.1.112" />
     </dependencies>
   </metadata>
   <files>
