--- a/NugetDbTools/Extensions/GitExtension/Package.nuspec
+++ b/NugetDbTools/Extensions/GitExtension/Package.nuspec
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0"?>
 <package>
   <metadata>
-    <id>VSTSExtension</id>
-    <version>0.1.5</version>
+    <id>GitExtension</id>
+    <version>0.1.4-Ecentric</version>
     <authors>joglethorpe</authors>
     <owners>Jamie Oglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
