--- a/NugetDbTools/NugetShared/Package.nuspec
+++ b/NugetDbTools/NugetShared/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>NuGetShared</id>
-    <version>0.1.108-Ecentric</version>
+    <version>0.1.123</version>
     <authors>joglethorpe</authors>
     <owners>Jamie Oglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
