Use ContentFiles for database objects

--- a/Template.DB/Template.DBProject/Template.DBProject.nuget.config
+++ b/Template.DB/Template.DBProject/Template.DBProject.nuget.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <nugetOptions>
-    <add key="majorVersion" value="0" />
-    <add key="minorVersion" value="2" />
+    <add key="majorVersion" value="1" />
+    <add key="minorVersion" value="0" />
   </nugetOptions>
   <nugetSettings>
     <add key="copyright" value="Copyright 2017" />
@@ -12,10 +12,13 @@
     <add key="description" value="Template.DBProject" />
     <add key="authors" value="joglethorpe" />
     <add key="owners" value="Jamie Oglethorpe" />
-    <add key="version" value="0.2.6" />
+    <add key="version" value="1.0.6" />
   </nugetSettings>
   <nugetDependencies>
     <add key="NuGetDbPacker" value="0.1.35" />
     <add key="NugetDbPackerDb.Root" value="0.2.1" />
   </nugetDependencies>
+  <nugetContents>
+    <add key="content/Databases/*" value="buildAction=&quot;none&quot; copyToOutput=&quot;true&quot;" />
+  </nugetContents>
 </configuration>
