Synchronize with GitHub Repackage all

--- a/Template.DB/Template.DBProject/Template.DBProject.nuget.config
+++ b/Template.DB/Template.DBProject/Template.DBProject.nuget.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <nugetOptions>
+    <add key="contentFolders" value="" />
     <add key="majorVersion" value="1" />
     <add key="minorVersion" value="0" />
   </nugetOptions>
@@ -12,13 +13,10 @@
     <add key="description" value="Template.DBProject" />
     <add key="authors" value="joglethorpe" />
     <add key="owners" value="Jamie Oglethorpe" />
-    <add key="version" value="1.0.6" />
+    <add key="version" value="1.0.20" />
   </nugetSettings>
   <nugetDependencies>
-    <add key="NuGetDbPacker" value="0.1.35" />
     <add key="NugetDbPackerDb.Root" value="0.2.1" />
+    <add key="NuGetDbPacker" value="0.1.152" />
   </nugetDependencies>
-  <nugetContents>
-    <add key="content/Databases/*" value="buildAction=&quot;none&quot; copyToOutput=&quot;true&quot;" />
-  </nugetContents>
 </configuration>
