--- a/NugetDbTools/NugetDbPackerDb/NugetDbPackerDb.Root/NugetDbPackerDb.Root.nuget.config
+++ b/NugetDbTools/NugetDbPackerDb/NugetDbPackerDb.Root/NugetDbPackerDb.Root.nuget.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <nugetOptions>
+    <add key="contentFolders" value="" />
     <add key="majorVersion" value="0" />
     <add key="minorVersion" value="2" />
   </nugetOptions>
@@ -11,10 +12,10 @@
     <add key="releaseNotes" value="First testing release" />
     <add key="description" value="NugetDbPackerDb.Root" />
     <add key="authors" value="joglethorpe" />
+    <add key="version" value="0.2.4" />
     <add key="owners" value="Ecentric Payment Systems" />
-    <add key="version" value="0.2.0" />
   </nugetSettings>
   <nugetDependencies>
-    <add key="NuGetDbPacker" value="0.1.35" />
+    <add key="NuGetDbPacker" value="0.1.152" />
   </nugetDependencies>
 </configuration>
