--- a/Template.DB/.gitignore
+++ b/Template.DB/.gitignore
@@ -165,7 +165,7 @@ DocProject/Help/html
 publish/
 
 # Publish Web Output
-*.[Pp]ublish.xml
+#*.[Pp]ublish.xml
 *.azurePubxml
 # Note: Comment the next line if you want to checkin your web deploy settings,
 # but database connection strings (with potential passwords) will be unencrypted
@@ -340,5 +340,5 @@ NuGetInstall/
 *.dtbcache
 TestResults/
 commands.json
-Runtime/
 *.dacpac
+/RegressionTests/Log/*.txt
