--- a/NugetDbTools/NugetDbPackerDb/NugetDbPackerDb.Root/NugetDbPackerDb.Root.nuget.config
+++ b/NugetDbTools/NugetDbPackerDb/NugetDbPackerDb.Root/NugetDbPackerDb.Root.nuget.config
@@ -11,7 +11,7 @@
     <add key="id" value="NugetDbPackerDb.Root" />
     <add key="releaseNotes" value="First testing release" />
     <add key="description" value="NugetDbPackerDb.Root" />
-    <add key="authors" value="joglethorpe" />
+    <add key="authors" value="JOglethorpe" />
     <add key="version" value="0.2.9" />
     <add key="owners" value="Ecentric Payment Systems" />
   </nugetSettings>
