--- a/NugetDbTools/NuGetProjectPacker/PackageTools.Project/PackageRelease.config
+++ b/NugetDbTools/NuGetProjectPacker/PackageTools.Project/PackageRelease.config
@@ -11,6 +11,12 @@
     <releaseNotes>Initial release</releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags></tags>
+	<releaseFolder>Release</releaseFolder>
+	<binaryReleaseFolder>Release\lib</binaryReleaseFolder>
+	<databaseReleaseFolder>Release\Databases</databaseReleaseFolder>
+	<includeBinary>False</includeBinary>
+	<includeContent>True</includeContent>
+	<clear>True</clear>
     <projects>
       <netProject>Project1</netProject>
       <netProject>Project2</netProject>
