Add content folders and files to package release

--- a/NugetDbTools/NuGetProjectPacker/PackageTools.Project/PackageRelease.config
+++ b/NugetDbTools/NuGetProjectPacker/PackageTools.Project/PackageRelease.config
@@ -14,8 +14,13 @@
 	<releaseFolder>Release</releaseFolder>
 	<binaryReleaseFolder>Release\lib</binaryReleaseFolder>
 	<databaseReleaseFolder>Release\Databases</databaseReleaseFolder>
+	<content>
+		<contentFolder>Runtime</contentFolder>
+		<contentFolder>Powershell</contentFolder>
+		<contentFile>PackagTools\PackageDeploy.ps1</contentFile>
+		<contentFile>PackageDeploy.config</contentFile>
+	</content>
 	<includeBinary>False</includeBinary>
-	<includeContent>True</includeContent>
 	<clear>True</clear>
     <projects>
       <netProject>Project1</netProject>
