Parameter handling:     Remove comma between parameters     Simplify configuration by replacing variables in the script

--- a/NugetDbTools/NuGetProjectPacker/PackageTools.Project/PackageDeploy.config
+++ b/NugetDbTools/NuGetProjectPacker/PackageTools.Project/PackageDeploy.config
@@ -17,7 +17,8 @@
     <database name="Ecentric.PNP.ReconAssistPlus.Retail.StagingDB" />
     <database name="Ecentric.PNP.RAP.Retail.ExportManagerDB" />
     <database name="Ecentric.PNP.ReconAssistPlus.Retail.ReconDB" />
-    <database name="Ecentric.PNP.ReconAssistPlus.Retail.ReconDB" parameters="'/TargetServerName:`&quot;$targetServerName`&quot;,/TargetDatabaseName:`&quot;ReconAssistPlusVAS`&quot;'" />
+    <database name="Ecentric.PNP.ReconAssistPlus.Retail.ReconDB"
+              parameters="/TargetServerName:&quot;$targetServerName&quot; /TargetDatabaseName:&quot;ReconAssistPlusVAS&quot;" />
   </databases>
   <cubes>
     <cube name="Ecentric.Recon.EFT.SSASCube"
