--- a/NugetDbTools/NugetDbPackerDb/NugetDbPackerDb.Root/NugetDbPackerDb.Root.nuget.config
+++ b/NugetDbTools/NugetDbPackerDb/NugetDbPackerDb.Root/NugetDbPackerDb.Root.nuget.config
@@ -11,11 +11,11 @@
     <add key="id" value="NugetDbPackerDb.Root" />
     <add key="releaseNotes" value="First testing release" />
     <add key="description" value="NugetDbPackerDb.Root" />
-    <add key="authors" value="joglethorpe" />
-    <add key="version" value="0.2.4" />
+    <add key="authors" value="JOglethorpe" />
     <add key="owners" value="Ecentric Payment Systems" />
+    <add key="version" value="0.2.11" />
   </nugetSettings>
   <nugetDependencies>
-    <add key="NuGetDbPacker" value="0.1.152" />
+    <add key="NuGetDbPacker" value="0.1.168" />
   </nugetDependencies>
 </configuration>
