Fix package release script

--- a/NugetDbTools/NuGetProjectPacker/PackageTools.Project/PackageRelease.config
+++ b/NugetDbTools/NuGetProjectPacker/PackageTools.Project/PackageRelease.config
@@ -11,6 +11,17 @@
     <releaseNotes>Initial release</releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags></tags>
+	<releaseFolder>Release</releaseFolder>
+	<binaryReleaseFolder>Release\lib</binaryReleaseFolder>
+	<databaseReleaseFolder>Release\Databases</databaseReleaseFolder>
+	<content>
+		<contentFolder>Runtime</contentFolder>
+		<contentFolder>Powershell</contentFolder>
+		<contentFile>PackagTools\PackageDeploy.ps1</contentFile>
+		<contentFile>PackageDeploy.config</contentFile>
+	</content>
+	<includeBinary>False</includeBinary>
+	<clear>True</clear>
     <projects>
       <netProject>Project1</netProject>
       <netProject>Project2</netProject>
