--- a/Template.DB/Template.DBPkg/Template.DBPkg.csproj
+++ b/Template.DB/Template.DBPkg/Template.DBPkg.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NuGetDbPacker" Version="0.1.181" />
+    <PackageReference Include="NuGetDbPacker" Version="0.1.204" />
     <PackageReference Include="NugetDbPackerDb.Root" Version="0.2.17" />
   </ItemGroup>
 
