--- a/Template.DB/Template.DBProject/Template.DBProject.nuget.config
+++ b/Template.DB/Template.DBProject/Template.DBProject.nuget.config
@@ -13,7 +13,7 @@
     <add key="description" value="Template.DBProject" />
     <add key="authors" value="joglethorpe" />
     <add key="owners" value="Jamie Oglethorpe" />
-    <add key="version" value="1.0.34" />
+    <add key="version" value="1.0.35-config" />
   </nugetSettings>
   <nugetDependencies>
     <add key="NugetDbPackerDb.Root" value="0.2.18" />
