--- a/Template.DB/Template.DBProject/Template.DBProject.nuget.config
+++ b/Template.DB/Template.DBProject/Template.DBProject.nuget.config
@@ -13,10 +13,10 @@
     <add key="description" value="Template.DBProject" />
     <add key="authors" value="joglethorpe" />
     <add key="owners" value="Jamie Oglethorpe" />
-    <add key="version" value="1.0.35-config" />
+    <add key="version" value="1.0.36" />
   </nugetSettings>
   <nugetDependencies>
-    <add key="NugetDbPackerDb.Root" value="0.2.18" />
-    <add key="NuGetDbPacker" value="0.1.204" />
+    <add key="NugetDbPackerDb.Root" value="0.2.24" />
+    <add key="NuGetDbPacker" value="0.1.209" />
   </nugetDependencies>
 </configuration>
