Replace references to AppData configuration with PackageTools.root.config references

--- a/Template.DB/PackageTools/PackageTools.root.config
+++ b/Template.DB/PackageTools/PackageTools.root.config
@@ -9,6 +9,7 @@
   </content>
   <nuget>
     <source>https://pkgs.dev.azure.com/epsdev/_packaging/EpsNuGet/nuget/v3/index.json</source>
+    <pushSource>https://pkgs.dev.azure.com/epsdev/_packaging/EpsNuGet/nuget/v3/index.json</pushSource>
     <pushTimeout>900</pushTimeout>
     <apiKey>AzureDevOps</apiKey>
   </nuget>
