--- a/NugetDbTools/NuGetSharedPacker/Tests/PackageTools.root.config
+++ b/NugetDbTools/NuGetSharedPacker/Tests/PackageTools.root.config
@@ -4,4 +4,10 @@
     <extension name="GitExtension" path="GitExtension.psm1" />
     <extension name="VSTSExtension" path="VSTSExtension.psm1" />
   </extensions>
+  <content>
+    <contentFolder>Runtime</contentFolder>
+  </content>
+  <nuget>
+    <source>$env:USERPROFILE\.nuget\packages</source>
+  </nuget>
 </tools>
