--- a/NugetDbTools/DbSolutionBuilder/Package.nuspec
+++ b/NugetDbTools/DbSolutionBuilder/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>DbSolutionBuilder</id>
-    <version>0.1.194</version>
+    <version>0.1.198-config</version>
     <authors>joglethorpe</authors>
     <owners>Jamie Oglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
@@ -14,6 +14,9 @@
     <dependencies>
       <dependency id="NuGetDbPacker" version="0.1.210" />
     </dependencies>
+    <packageTypes>
+      <packageType name="DacPac"/>
+    </packageTypes>
   </metadata>
   <files>
     <file src="content\PackageTools\*" target="PackageTools" />
