--- a/NugetDbTools/NugetShared/Package.nuspec
+++ b/NugetDbTools/NugetShared/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>NuGetShared</id>
-    <version>0.1.168</version>
+    <version>0.1.173-config</version>
     <authors>joglethorpe</authors>
     <owners>Jamie Oglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
@@ -11,6 +11,9 @@
     <releaseNotes>Initial release</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>NuGetShared Common</tags>
+    <packageTypes>
+      <packageType name="DacPac"/>
+    </packageTypes>
   </metadata>
   <files>
     <file src="content\PowerShell\*" target="PowerShell" />
