--- a/NugetDbTools/NuGetProjectPacker/Package.nuspec
+++ b/NugetDbTools/NuGetProjectPacker/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>NuGetProjectPacker</id>
-    <version>0.1.145-config</version>
+    <version>0.1.146</version>
     <authors>joglethorpe</authors>
     <owners>joglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
@@ -12,11 +12,8 @@
     <copyright>Copyright 2017</copyright>
     <tags>NuGetProjectPacker 'CI tools'</tags>
     <dependencies>
-      <dependency id="NuGetSharedPacker" version="0.1.178" />
+      <dependency id="NuGetSharedPacker" version="0.1.180" />
     </dependencies>
-    <packageTypes>
-      <packageType name="DacPac"/>
-    </packageTypes>
   </metadata>
   <files>
     <file src="content\PackageTools\*" target="PackageTools" />
