--- a/NugetDbTools/NugetShared/Package.nuspec
+++ b/NugetDbTools/NugetShared/Package.nuspec
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <package>
   <metadata>
     <id>NuGetShared</id>
-    <version>0.1.173-config</version>
+    <version>0.1.174</version>
     <authors>joglethorpe</authors>
     <owners>Jamie Oglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
@@ -12,7 +12,7 @@
     <copyright>Copyright 2017</copyright>
     <tags>NuGetShared Common</tags>
     <packageTypes>
-      <packageType name="DacPac"/>
+      <packageType name="DacPac" />
     </packageTypes>
   </metadata>
   <files>
