Correct NuGet values in configuration

--- a/NugetDbTools/PackageTools/PackageTools.root.config
+++ b/NugetDbTools/PackageTools/PackageTools.root.config
@@ -8,7 +8,8 @@
         <contentFolder>Runtime</contentFolder>
     </content>
     <nuget>
-        <source>\NuGetSource</source>
-        <apiKey>ApiKey</apiKey>
+		<source>https://pkgs.dev.azure.com/epsdev/_packaging/EpsNuGet/nuget/v3/index.json</source>
+		<pushTimeout>900</pushTimeout>
+		<apiKey>AzureDevOps</apiKey>
     </nuget>
 </tools>
