Update package dependencies

--- a/NugetDbTools/NugetDbPackerDb/PackageTools/PackageTools.root.config
+++ b/NugetDbTools/NugetDbPackerDb/PackageTools/PackageTools.root.config
@@ -1,15 +1,15 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <tools>
-	<extensions>
-		<extension name="GitExtension" path="GitExtension.psm1" />
-		<extension name="VSTSExtension" path="VSTSExtension.psm1" />
-	</extensions>
-  <content>
-    <contentFolder>Runtime</contentFolder>
-  </content>
-  <nuget>
-    <source>https://pkgs.dev.azure.com/epsdev/_packaging/EpsNuGet/nuget/v3/index.json</source>
-    <pushTimeout>900</pushTimeout>
-    <apiKey>AzureDevOps</apiKey>
-  </nuget>
+    <extensions>
+        <extension name="GitExtension" path="GitExtension.psm1" />
+        <extension name="VSTSExtension" path="VSTSExtension.psm1" />
+    </extensions>
+    <content>
+        <contentFolder>Runtime</contentFolder>
+    </content>
+    <nuget>
+		<source>https://pkgs.dev.azure.com/epsdev/_packaging/EpsNuGet/nuget/v3/index.json</source>
+		<pushTimeout>900</pushTimeout>
+		<apiKey>AzureDevOps</apiKey>
+    </nuget>
 </tools>
