Get tests to work with GitHub nuget feed and specified functions exported by modules

--- a/NugetDbTools/NugetDbPacker/Tests/PackageTools.root.config
+++ b/NugetDbTools/NugetDbPacker/Tests/PackageTools.root.config
@@ -4,4 +4,9 @@
     <extension name="GitExtension" path="GitExtension.psm1" />
     <extension name="VSTSExtension" path="VSTSExtension.psm1" />
   </extensions>
+    <nuget>
+		<source>https://nuget.pkg.github.com/JamieO53/index.json</source>
+		<pushTimeout>900</pushTimeout>
+		<apiKey>github</apiKey>
+    </nuget>
 </tools>
