--- a/Template.DB/Template.DBProject/Template.DBProject.nuget.config
+++ b/Template.DB/Template.DBProject/Template.DBProject.nuget.config
@@ -13,10 +13,10 @@
     <add key="description" value="Template.DBProject" />
     <add key="authors" value="joglethorpe" />
     <add key="owners" value="Jamie Oglethorpe" />
-    <add key="version" value="1.0.40" />
+    <add key="version" value="1.0.51-githubmaster" />
   </nugetSettings>
   <nugetDependencies>
     <add key="NugetDbPackerDb.Root" value="0.2.27" />
-    <add key="NuGetDbPacker" value="0.1.237" />
+    <add key="NuGetDbPacker" value="0.1.246" />
   </nugetDependencies>
 </configuration>
