--- a/NugetDbTools/NugetDbPacker/Package.nuspec
+++ b/NugetDbTools/NugetDbPacker/Package.nuspec
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <package>
   <metadata>
     <id>NuGetDbPacker</id>
-    <version>0.1.250-TP61721-f-changed-commits</version>
+    <version>0.1.251-TP61721-f-changed-commits</version>
     <authors>joglethorpe</authors>
     <owners>joglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
