--- a/NugetDbTools/DbSolutionBuilder/Package.nuspec
+++ b/NugetDbTools/DbSolutionBuilder/Package.nuspec
@@ -1,8 +1,8 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <package>
   <metadata>
     <id>DbSolutionBuilder</id>
-    <version>0.1.231-TP61721-f-changed-commits</version>
+    <version>0.1.232-TP61721-f-changed-commits</version>
     <authors>joglethorpe</authors>
     <owners>Jamie Oglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
