--- a/NugetDbTools/NugetDbPacker/Package.nuspec
+++ b/NugetDbTools/NugetDbPacker/Package.nuspec
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <package>
   <metadata>
     <id>NuGetDbPacker</id>
-    <version>0.1.252-TP61721-f-changed-commits</version>
+    <version>0.1.254</version>
     <authors>joglethorpe</authors>
     <owners>joglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
@@ -12,7 +12,7 @@
     <copyright>Copyright 2017</copyright>
     <tags>NuGetDbPacker 'CI tools'</tags>
     <dependencies>
-      <dependency id="NuGetSharedPacker" version="0.1.226-TP61721-f-changed-commits" />
+      <dependency id="NuGetSharedPacker" version="0.1.229" />
     </dependencies>
   </metadata>
   <files>
