--- a/NugetDbTools/NuGetSharedPacker/Package.nuspec
+++ b/NugetDbTools/NuGetSharedPacker/Package.nuspec
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <package>
   <metadata>
     <id>NuGetSharedPacker</id>
-    <version>0.1.229</version>
+    <version>0.1.230</version>
     <authors>joglethorpe</authors>
     <owners>joglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
