--- a/NugetDbTools/DbSolutionBuilder/Package.nuspec
+++ b/NugetDbTools/DbSolutionBuilder/Package.nuspec
@@ -1,8 +1,8 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <package>
   <metadata>
     <id>DbSolutionBuilder</id>
-    <version>0.1.237</version>
+    <version>0.1.238</version>
     <authors>joglethorpe</authors>
     <owners>Jamie Oglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
@@ -12,7 +12,7 @@
     <copyright>Copyright 2017</copyright>
     <tags>DbSolutionBuilder CI Migration</tags>
     <dependencies>
-      <dependency id="NuGetDbPacker" version="0.1.257" />
+      <dependency id="NuGetDbPacker" version="0.1.258" />
     </dependencies>
   </metadata>
   <files>
