--- a/NugetDbTools/NuGetSharedPacker/Package.nuspec
+++ b/NugetDbTools/NuGetSharedPacker/Package.nuspec
@@ -1,8 +1,8 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <package>
   <metadata>
     <id>NuGetSharedPacker</id>
-    <version>0.1.231</version>
+    <version>0.1.232</version>
     <authors>joglethorpe</authors>
     <owners>joglethorpe</owners>
     <projectUrl>https://github.com/JamieO53/nuget-for-sql-projects</projectUrl>
@@ -12,7 +12,7 @@
     <copyright>Copyright 2017</copyright>
     <tags>NuGetSharedPacker 'CI tools'</tags>
     <dependencies>
-      <dependency id="NuGetShared" version="0.1.196" />
+      <dependency id="NuGetShared" version="0.1.197" />
     </dependencies>
   </metadata>
   <files>
