--- a/NugetDbTools/NuGetProjectPacker/PackageTools.Project/PackageDeploy.config
+++ b/NugetDbTools/NuGetProjectPacker/PackageTools.Project/PackageDeploy.config
@@ -3,7 +3,7 @@
   <deployChannels>
     <deployChannel name="UAT" targetServerName="10.4.8.61" />
     <deployChannel name="PROD" targetServerName="WCSQL11\WCSQLDB11" />
-    <deployChannel name="DEV" targetServerName="(localdb)\ecentric" />
+    <deployChannel name="DEV" targetServerName="(localdb)\jamieo53" />
   </deployChannels>
   <paths>
     <dbPath>Databases</dbPath>
