--- a/NugetDbTools/PackageTools/PackageTools.root.config
+++ b/NugetDbTools/PackageTools/PackageTools.root.config
@@ -8,7 +8,7 @@
         <contentFolder>Runtime</contentFolder>
     </content>
     <nuget>
-		<source>https://pkgs.dev.azure.com/epsdev/_packaging/EpsNuGet/nuget/v3/index.json</source>
+		<source>https://nuget.pkg.github.com/jamieo53/index.json</source>
 		<pushTimeout>900</pushTimeout>
 		<apiKey>AzureDevOps</apiKey>
     </nuget>
